Добавлены иконки для меню и кнопок. Добавлен в gradle ColorPicker. Исправлены fragment_scan и fragment_ledstrip.xml

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,9 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/itemScanBtDevices"
+        android:icon="@drawable/ic_baseline_search_24"
+        android:title="@string/itemScanBtDevices"
+        app:showAsAction="ifRoom" />
 </menu>
