--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/ScanFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
+        android:id="@+id/ScanFragment"
         android:name="com.grandfatherpikhto.ledstrip.ScanFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
+        android:label="@string/scan_fragment_label"
+        tools:layout="@layout/fragment_scan">
 
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/action_ScanFragment_to_LedstripFragment"
+            app:destination="@id/LedstripFragment" />
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
+        android:id="@+id/LedstripFragment"
         android:name="com.grandfatherpikhto.ledstrip.LedstripFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        android:label="@string/ledstrip_fragment_label"
+        tools:layout="@layout/fragment_ledstrip">
 
         <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
+            android:id="@+id/action_LedstripFragment_to_ScanFragment"
+            app:destination="@id/ScanFragment" />
     </fragment>
 </navigation>
