--- a/app/src/main/res/menu/menu_ledstrip.xml
+++ b/app/src/main/res/menu/menu_ledstrip.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/itemEnableLedStrip"
+        android:title="@string/itemEnableLedStrip" />
+    <item
+        android:id="@+id/itemBtDevicesList"
+        android:icon="@drawable/ic_baseline_search_24"
+        android:title="@string/itemBtDevicesList" />
 </menu>
