--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.grandfatherpikhto.ledstrip.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/itemOptions"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
