--- a/app/src/main/res/layout/fragment_ledstrip.xml
+++ b/app/src/main/res/layout/fragment_ledstrip.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LedstripFragment">
+    tools:context=".ui.ledstrip.LedstripFragment">
 
     <top.defaults.colorpicker.ColorPickerView
         android:id="@+id/colorPickerView"
