--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/ScanFragment">
+    app:startDestination="@id/LedstripFragment">
 
     <fragment
         android:id="@+id/ScanFragment"
-        android:name="com.grandfatherpikhto.ledstrip.ScanFragment"
+        android:name="com.grandfatherpikhto.ledstrip.ui.scan.ScanFragment"
         android:label="@string/scan_fragment_label"
         tools:layout="@layout/fragment_scan">
 
@@ -20,7 +20,7 @@
     </fragment>
     <fragment
         android:id="@+id/LedstripFragment"
-        android:name="com.grandfatherpikhto.ledstrip.LedstripFragment"
+        android:name="com.grandfatherpikhto.ledstrip.ui.ledstrip.LedstripFragment"
         android:label="@string/ledstrip_fragment_label"
         tools:layout="@layout/fragment_ledstrip">
 
