--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,8 +15,8 @@
             android:id="@+id/action_ScanFragment_to_LedstripFragment"
             app:destination="@id/LedstripFragment" />
         <action
-            android:id="@+id/action_ScanFragment_to_OptionsFragment"
-            app:destination="@id/OptionsFragment" />
+            android:id="@+id/action_ScanFragment_to_SettingsFragment"
+            app:destination="@id/SettingsFragment" />
     </fragment>
     <fragment
         android:id="@+id/LedstripFragment"
@@ -28,19 +28,18 @@
             android:id="@+id/action_LedstripFragment_to_ScanFragment"
             app:destination="@id/ScanFragment" />
         <action
-            android:id="@+id/action_LedstripFragment_to_OptionsFragment"
-            app:destination="@id/OptionsFragment" />
+            android:id="@+id/action_LedstripFragment_to_SettingsFragment"
+            app:destination="@id/SettingsFragment" />
     </fragment>
     <fragment
-        android:id="@+id/OptionsFragment"
-        android:name="com.grandfatherpikhto.ledstrip.OptionsFragment"
-        android:label="fragment_options"
-        tools:layout="@layout/fragment_options" >
+        android:id="@+id/SettingsFragment"
+        android:name="com.grandfatherpikhto.ledstrip.ui.preference.SettingsFragment"
+        android:label="SettingsFragment">
         <action
-            android:id="@+id/action_OptionsFragment_to_LedstripFragment"
-            app:destination="@id/LedstripFragment" />
-        <action
-            android:id="@+id/action_OptionsFragment_to_ScanFragment"
+            android:id="@+id/action_SettingsFragment_to_ScanFragment"
             app:destination="@id/ScanFragment" />
+        <action
+            android:id="@+id/action_SettingsFragment_to_LedstripFragment"
+            app:destination="@id/LedstripFragment" />
     </fragment>
 </navigation>
