--- a/app/src/main/res/layout/fragment_ledstrip.xml
+++ b/app/src/main/res/layout/fragment_ledstrip.xml
@@ -13,7 +13,6 @@
         android:id="@+id/colorPickerView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        aigestudio:layout_constraintBottom_toTopOf="@+id/regimePicker"
         app:enableAlpha="false"
         app:enableBrightness="true"
         app:layout_constraintHorizontal_bias="0.5"
@@ -30,6 +29,19 @@
         android:orientation="vertical"
         aigestudio:layout_constraintBottom_toBottomOf="parent"
         aigestudio:layout_constraintEnd_toEndOf="parent"
+        aigestudio:layout_constraintHorizontal_bias="0.5"
+        aigestudio:layout_constraintStart_toEndOf="@+id/swEnable"
+        aigestudio:layout_constraintTop_toBottomOf="@+id/colorPickerView" />
+
+    <Switch
+        android:id="@+id/swEnable"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minHeight="48dp"
+        android:text="@string/swEnable"
+        aigestudio:layout_constraintBottom_toBottomOf="parent"
+        aigestudio:layout_constraintEnd_toStartOf="@+id/regimePicker"
+        aigestudio:layout_constraintHorizontal_bias="0.5"
         aigestudio:layout_constraintStart_toStartOf="parent"
         aigestudio:layout_constraintTop_toBottomOf="@+id/colorPickerView" />
 
