--- a/app/src/main/res/layout-land/fragment_ledstrip.xml
+++ b/app/src/main/res/layout-land/fragment_ledstrip.xml
@@ -30,20 +30,19 @@
         android:layout_gravity="center_horizontal"
         android:width="100dp"
         android:orientation="vertical"
-        aigestudio:layout_constraintBottom_toTopOf="@+id/swEnable"
+        aigestudio:layout_constraintBottom_toTopOf="@+id/btnDisable"
         aigestudio:layout_constraintEnd_toEndOf="parent"
+        aigestudio:layout_constraintHorizontal_bias="0.5"
         aigestudio:layout_constraintStart_toEndOf="@+id/colorPickerView"
         aigestudio:layout_constraintTop_toTopOf="parent" />
 
-    <Switch
-        android:id="@+id/swEnable"
+    <Button
+        android:id="@+id/btnDisable"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:minHeight="48dp"
-        android:text="@string/swEnable"
+        android:text="@string/btnDisable"
         aigestudio:layout_constraintBottom_toBottomOf="parent"
-        aigestudio:layout_constraintEnd_toEndOf="parent"
-        aigestudio:layout_constraintStart_toEndOf="@+id/colorPickerView"
-        aigestudio:layout_constraintTop_toBottomOf="@+id/regimePicker" />
+        aigestudio:layout_constraintTop_toBottomOf="@+id/regimePicker"
+        tools:layout_editor_absoluteX="503dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
