--- a/app/src/main/res/layout/fragment_ledstrip.xml
+++ b/app/src/main/res/layout/fragment_ledstrip.xml
@@ -28,17 +28,16 @@
         android:width="100dp"
         android:orientation="vertical"
         aigestudio:layout_constraintBottom_toBottomOf="parent"
-        aigestudio:layout_constraintEnd_toStartOf="@+id/swEnable"
+        aigestudio:layout_constraintEnd_toStartOf="@+id/btnDisable"
         aigestudio:layout_constraintHorizontal_bias="0.5"
         aigestudio:layout_constraintStart_toStartOf="parent"
         aigestudio:layout_constraintTop_toBottomOf="@+id/colorPickerView" />
 
-    <Switch
-        android:id="@+id/swEnable"
+    <Button
+        android:id="@+id/btnDisable"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:minHeight="48dp"
-        android:text="@string/swEnable"
+        android:text="@string/btnDisable"
         aigestudio:layout_constraintBottom_toBottomOf="parent"
         aigestudio:layout_constraintEnd_toEndOf="parent"
         aigestudio:layout_constraintHorizontal_bias="0.5"
