--- a/app/src/main/res/layout-land/fragment_ledstrip.xml
+++ b/app/src/main/res/layout-land/fragment_ledstrip.xml
@@ -9,7 +9,7 @@
     tools:context=".ui.ledstrip.LedstripFragment">
 
     <top.defaults.colorpicker.ColorPickerView
-        android:id="@+id/colorPickerView"
+        android:id="@+id/colorPicker"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:enableAlpha="false"
@@ -33,7 +33,7 @@
         aigestudio:layout_constraintBottom_toTopOf="@+id/btnDisable"
         aigestudio:layout_constraintEnd_toEndOf="parent"
         aigestudio:layout_constraintHorizontal_bias="0.5"
-        aigestudio:layout_constraintStart_toEndOf="@+id/colorPickerView"
+        aigestudio:layout_constraintStart_toEndOf="@+id/colorPicker"
         aigestudio:layout_constraintTop_toTopOf="parent" />
 
     <Button
