--- a/app/src/main/res/layout/fragment_container.xml
+++ b/app/src/main/res/layout/fragment_container.xml
@@ -4,16 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.SplashFragment">
+    tools:context=".ui.ContainerFragment">
 
-    <pl.droidsonroids.gif.GifImageView
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/vpContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
-        android:src="@drawable/ledstrip_spinner"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
