--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.grandfatherpikhto.ledstrip.MainActivity">
+    tools:context="com.grandfatherpikhto.ledstrip.ui.MainActivity">
+    <item
+        android:id="@+id/itemDevicesList"
+        android:title="@string/itemDevicesList" />
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
