--- a/app/src/main/res/layout/fragment_blink.xml
+++ b/app/src/main/res/layout/fragment_blink.xml
@@ -2,69 +2,82 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/csBlink"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.blink.BlinkFragment">
+    tools:context=".ui.control.BlinkFragment">
 
-    <top.defaults.colorpicker.ColorPickerView
-        android:id="@+id/colorPickerBlink"
+    <com.larswerkman.holocolorpicker.ColorPicker
+        android:id="@+id/pickerBlink"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:enableAlpha="false"
-        app:enableBrightness="true"
-        app:layout_constraintBottom_toTopOf="@+id/tvFrequency"
+        app:layout_constraintBottom_toTopOf="@+id/svbarColor"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvTitleBlink" />
+
+    <com.larswerkman.holocolorpicker.SVBar
+        android:id="@+id/svbarColor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/slBlinkFrequency"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pickerBlink" />
+
+    <com.google.android.material.slider.Slider
+        android:id="@+id/slBlinkFrequency"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/tvBlinkFrequency"
+        android:max="100"
+        android:stepSize="1"
+        android:value="20.0"
+        android:valueFrom="1.00"
+        android:valueTo="100.0"
+        app:layout_constraintBottom_toTopOf="@+id/swEnableBlink"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/svbarColor"
+        app:tickVisible="true" />
+
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/swEnableBlink"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/switchEnable"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/slBlinkFrequency" />
+
+    <TextView
+        android:id="@+id/tvTitleBlink"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/tvTitleBlink"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toTopOf="@+id/pickerBlink"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <TextView
         android:id="@+id/tvFrequency"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/blinkFrequency"
-        app:layout_constraintBottom_toTopOf="@+id/sbFrequency"
+        android:layout_marginTop="24dp"
+        android:text="@string/tvBlinkFrequency"
+        app:layout_constraintBottom_toTopOf="@+id/slBlinkFrequency"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.19"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/colorPickerBlink" />
+        app:layout_constraintTop_toBottomOf="@+id/svbarColor"
+        app:layout_constraintVertical_bias="0.3" />
 
-    <SeekBar
-        android:id="@+id/sbFill"
-        android:layout_width="411dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/swBlinkEnable"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvFill" />
 
-    <SeekBar
-        android:id="@+id/sbFrequency"
-        android:layout_width="411dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/tvFill"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvFrequency" />
-
-    <TextView
-        android:id="@+id/tvFill"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/blinkFill"
-        app:layout_constraintBottom_toTopOf="@+id/sbFill"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sbFrequency" />
-
-    <Switch
-        android:id="@+id/swBlinkEnable"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Switch"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.87"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sbFill" />
 </androidx.constraintlayout.widget.ConstraintLayout>
