--- a/app/src/main/res/layout/fragment_tail.xml
+++ b/app/src/main/res/layout/fragment_tail.xml
@@ -1,54 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.control.TailFragment">
 
-    <com.larswerkman.holocolorpicker.SVBar
-        android:id="@+id/svbarTail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/slTailSpeed"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pickerTail" />
-
-    <com.larswerkman.holocolorpicker.ColorPicker
-        android:id="@+id/pickerTail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/svbarTail"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvTitleTail" />
-
     <com.google.android.material.slider.Slider
         android:id="@+id/slTailSpeed"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/tvTailWidth"
+        android:contentDescription="@string/tvTailLen"
         android:value="50"
         android:valueFrom="10"
         android:valueTo="100"
         app:layout_constraintBottom_toTopOf="@+id/slTailWidth"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/svbarTail" />
+        app:layout_constraintTop_toBottomOf="@+id/tvTitleTail" />
 
     <com.google.android.material.slider.Slider
         android:id="@+id/slTailWidth"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/tvTailWidth"
+        android:contentDescription="@string/tvTailLen"
         android:value="25"
         android:valueFrom="5"
         android:valueTo="100"
         app:layout_constraintBottom_toTopOf="@+id/swEnableTail"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/slTailSpeed" />
 
@@ -68,30 +48,28 @@
         android:layout_height="wrap_content"
         android:text="@string/tvTitleTail"
         android:textSize="34sp"
-        app:layout_constraintBottom_toTopOf="@+id/pickerTail"
+        app:layout_constraintBottom_toTopOf="@+id/slTailSpeed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvTailSpeed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="35dp"
+        android:layout_height="14dp"
         android:text="@string/tvTailSpeed"
         app:layout_constraintBottom_toTopOf="@+id/slTailSpeed"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.09"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/svbarTail" />
+        app:layout_constraintTop_toBottomOf="@+id/tvTitleTail" />
 
     <TextView
-        android:id="@+id/tvTailWidth"
+        android:id="@+id/tvTailLen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/tvTailWidth"
+        android:text="@string/tvTailLen"
         app:layout_constraintBottom_toTopOf="@+id/slTailWidth"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.07"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/slTailSpeed" />
 </androidx.constraintlayout.widget.ConstraintLayout>
